--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width,initial-scale=1'>
 
-        <title>Svelte Starterkit</title>
+        <title>Radio.co Player template</title>
 
         <link rel='icon' type='image/png' href='/images/favicon.png'>
 
